<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:hint="@string/email_hint"
                android:background="@drawable/edit_text_bg"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:id="@+id/pass_view"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="15dp"

                app:layout_constraintStart_toStartOf="@id/email"
                app:layout_constraintEnd_toEndOf="@id/email"
                app:layout_constraintTop_toBottomOf="@id/email"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:background="#00ffffff"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"


                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toStartOf="@id/pass_toggle_bt"
                app:layout_constraintTop_toTopOf="@id/pass_view"
                app:layout_constraintBottom_toBottomOf="@id/pass_view"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pass_toggle_bt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/visibility"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="10dp"

                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintTop_toTopOf="@id/pass"
                app:layout_constraintBottom_toBottomOf="@id/pass"
                app:layout_constraintDimensionRatio="4:4"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_bt"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/login_bt_bg"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:gravity="center"

                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintTop_toBottomOf="@id/pass_view"


                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_with_otp"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:background="#00ffffff"
                android:text="@string/login_w_otp"
                android:textStyle="bold"
                android:textColor="@color/k_accent"
                android:gravity="center"

                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintTop_toBottomOf="@id/login_bt"


                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>