<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="location"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/e_pass"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:hint="@string/enter_pass"
                android:background="@drawable/edit_text_bg"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:inputType="number"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:id="@+id/pass_view"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="15dp"

                app:layout_constraintStart_toStartOf="@id/e_pass"
                app:layout_constraintEnd_toEndOf="@id/e_pass"
                app:layout_constraintTop_toBottomOf="@id/e_pass"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/c_pass"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/confirm_pass"
                android:background="#00ffffff"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"
                android:inputType="numberPassword"


                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toStartOf="@id/pass_toggle_bt"
                app:layout_constraintTop_toTopOf="@id/pass_view"
                app:layout_constraintBottom_toBottomOf="@id/pass_view"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pass_toggle_bt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/visibility"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="10dp"

                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintTop_toTopOf="@id/c_pass"
                app:layout_constraintBottom_toBottomOf="@id/c_pass"
                app:layout_constraintDimensionRatio="4:4"
                />



            <TextView
                android:id="@+id/off_l_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_office_loc"
                android:textColor="@color/label_secondary"
                android:layout_marginTop="45dp"

                app:layout_constraintTop_toBottomOf="@id/pass_view"
                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintHorizontal_bias="0"
                />




            <View
                android:id="@+id/off_l_view"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="15dp"

                app:layout_constraintStart_toStartOf="@id/pass_view"
                app:layout_constraintEnd_toEndOf="@id/pass_view"
                app:layout_constraintTop_toBottomOf="@id/off_l_text"
                />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:text="4th Block, HSR Layout"
                android:text="@{location}"
                android:textColor="@color/label_primary"
                android:textSize="15sp"
                android:background="#00ffffff"
                android:paddingHorizontal="15dp"
                android:gravity="center_vertical"


                app:layout_constraintStart_toStartOf="@id/off_l_view"
                app:layout_constraintEnd_toStartOf="@id/location_toggle_bt"
                app:layout_constraintTop_toTopOf="@id/off_l_view"
                app:layout_constraintBottom_toBottomOf="@id/off_l_view"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/location_toggle_bt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/expand_more"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="10dp"

                app:layout_constraintEnd_toEndOf="@id/off_l_view"
                app:layout_constraintTop_toTopOf="@id/location"
                app:layout_constraintBottom_toBottomOf="@id/location"
                app:layout_constraintDimensionRatio="4:4"
                />








            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/proceed"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:background="@drawable/login_bt_bg"
                android:layout_marginTop="40dp"
                android:text="@string/proceed"
                android:textColor="@color/white"
                android:gravity="center"

                app:layout_constraintStart_toStartOf="@id/off_l_view"
                app:layout_constraintEnd_toEndOf="@id/off_l_view"
                app:layout_constraintTop_toBottomOf="@id/off_l_view"


                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>